--- a/client/layout/head.html
+++ b/client/layout/head.html
@@ -1,4 +1,9 @@
 <head>
+	<meta http-equiv="cleartype" content="on">
+    <meta name="MobileOptimized" content="320">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>
 		Brandeis Carpool App
 	</title>
