--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -22,6 +22,7 @@
 		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      	<ul class="nav navbar-nav">
 					<li><a href="{{pathFor 'about'}}">About</a></li>
+					<li><a href="{{pathFor 'map'}}">Map</a></li>
 					<!--
 					<li><a href="{{pathFor 'rideinfo'}}">RideInfo</a></li>
 					<li><a href="{{pathFor 'chat'}}">Chat</a></li>
