--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,87 +1,55 @@
-
 <template name="layout">
-    <div id="wrapper">
-        <div class="overlay"></div>
-    
-        <!-- Sidebar -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
-            <ul class="nav sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                       Brandeis Carpool
-                    </a>
-                </li>
-                <!--
-                <li>
-                	{{> loginButtons}}
-                </li>
-            	-->
-            	<li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ userName }} <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Options</li>
-                    <li><a href="#" class="logout">Logout</a></li>
-                  </ul>
-                </li>
-                <li>
-                	<a class="navbar-brand" href="{{pathFor 'welcome'}}">Home</a>
-                </li>
-                <li>
-                    <a href="{{pathFor 'about'}}">About</a>
-                </li>
-             
-                 {{#if shouldShowMapTab}}
-				<li>
-					<a href="{{pathFor 'map'}}">Map</a>
-				</li>
-				{{/if}}
-                {{#if shouldShowTripTab}}
-				<li>
-					<a href="{{pathFor 'tripinfo'}}">Trip</a>
-				</li>
-				{{/if}}
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Works <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li class="dropdown-header">Dropdown heading</li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/maridlcrmn">Follow me</a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /#sidebar-wrapper -->
+  {{#ionBody}}
 
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-        	<button type="button" class="hamburger is-closed" data-toggle="offcanvas">
-                <span class="hamb-top"></span>
-    			<span class="hamb-middle"></span>
-				<span class="hamb-bottom"></span>
-            </button>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">                        
-                    </div>
+    {{#ionSideMenuContainer side="left"}}
+
+      {{#ionSideMenus}}
+
+        {{#ionSideMenu}}
+          <div class="bar bar-header bar-dark">
+            <h1 class="title">BCarpool</h1>
+          </div>
+          <div class="content has-header">
+            <div class="list">
+              <div class="item">
+                <div class="pull-left">
+                {{ userName }}
                 </div>
+                <div class="pull-right">
+                <a href="#" class="button button-small button-assertive logout">Logout</a>
+                </div>
+              </div>
+              <a class="item item-icon-right" href="{{pathFor 'welcome'}}" data-ion-menu-close>Home{{> ionIcon icon="ios-arrow-right"}}</a>
+              <a class="item item-icon-right" href="{{pathFor 'about'}}" data-ion-menu-close>About{{> ionIcon icon="ios-arrow-right"}}</a>
+              {{#if shouldShowMapTab}}
+                <a class="item item-icon-right" href="{{pathFor 'map'}}" data-ion-menu-close>Map{{> ionIcon icon="ios-arrow-right"}}</a>
+              {{/if}}
+              {{#if shouldShowTripTab}}
+                <a class="item item-icon-right" href="{{pathFor 'tripinfo'}}" data-ion-menu-close>Trip{{> ionIcon icon="ios-arrow-right"}}</a>
+              {{/if}}
+
+              <div class="item item-icon-right" data-ion-menu-close>
+                Close Me {{> ionIcon icon="ios-arrow-right"}}
+              </div>
             </div>
-        </div>
-  </div>
-  {{> yield}}
+          </div>
+        {{/ionSideMenu}}
+
+      {{/ionSideMenus}}
+
+      {{#ionSideMenuContent}}
+
+        {{> ionNavBar class="bar-positive"}}
+
+        {{#ionNavView}}
+            
+            {{> yield}}
+
+        {{/ionNavView}}
+
+      {{/ionSideMenuContent}}
+
+    {{/ionSideMenuContainer}}
+
+  {{/ionBody}}
 </template>
-
-
-
-
