--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -1,5 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 
+label {
+display: inline-block;
+}
+
+label > * {
+pointer-events: none;
+}
+
+
 /* login page */
 
 
