--- a/client/layout/layout.css
+++ b/client/layout/layout.css
@@ -7,7 +7,24 @@ display: inline-block;
 label > * {
 pointer-events: none;
 }
+/*
+.button-bar{
+  margin: 0;
+  padding: 0;
+  left:0px;
+  position: absolute;
+  padding-left: 10px;
+  padding-bottom: 24px;
+  width: 70%;
+}
+*/
 
+.button-bar{
+  padding-left: 10px;
+  padding-bottom: 24px;
+  padding-right: 45px;
+  width: 90%;
+}
 
 /* login page */
 
