--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
   {{#ionBody}}
 
-    {{#ionSideMenuContainer side="left"}}
+    {{#ionSideMenuContainer side="left" dragContent=false}}
 
       {{#ionSideMenus}}
 
@@ -24,10 +24,7 @@
               {{#if shouldShowMapTab}}
                 <a class="item item-icon-right" href="{{pathFor 'map'}}" data-ion-menu-close>Map{{> ionIcon icon="ios-arrow-right"}}</a>
               {{/if}}
-              {{#if shouldShowTripTab}}
-                <a class="item item-icon-right" href="{{pathFor 'tripinfo'}}" data-ion-menu-close>Trip{{> ionIcon icon="ios-arrow-right"}}</a>
-              {{/if}}
-
+                <a class="item item-icon-right" href="{{pathFor 'historyinfo'}}" data-ion-menu-close>History{{> ionIcon icon="ios-arrow-right"}}</a>
               <div class="item item-icon-right" data-ion-menu-close>
                 Close Me {{> ionIcon icon="ios-arrow-right"}}
               </div>
