--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,7 +1,7 @@
 <template name="layout">
   {{#ionBody}}
 
-    {{#ionSideMenuContainer side="left" dragContent=false}}
+    {{#ionSideMenuContainer dragContent=false}}
 
       {{#ionSideMenus}}
 
@@ -11,7 +11,8 @@
           </div>
           <div class="content has-header">
             <div class="list">
-              <div class="item">
+              <div class="item item-icon-left">
+                {{> ionIcon icon="ios-person"}}
                 <div class="pull-left">
                 {{ userName }}
                 </div>
@@ -19,14 +20,15 @@
                 <a href="#" class="button button-small button-assertive icon-left ion-power logout">Log Out</a>
                 </div>
               </div>
-              <a class="item item-icon-right" href="{{pathFor 'welcome'}}" data-ion-menu-close>Home{{> ionIcon icon="ios-arrow-right"}}</a>
-              <a class="item item-icon-right" href="{{pathFor 'about'}}" data-ion-menu-close>About{{> ionIcon icon="ios-arrow-right"}}</a>
+              <a class="item item-icon-left item-icon-right" href="{{pathFor 'welcome'}}" data-ion-menu-close>{{> ionIcon icon="ios-home"}}Home{{> ionIcon icon="ios-arrow-right"}}</a>
+              <a class="item item-icon-left item-icon-right" href="{{pathFor 'about'}}" data-ion-menu-close>{{> ionIcon icon="ios-information"}}About{{> ionIcon icon="ios-arrow-right"}}</a>
               {{#if shouldShowMapTab}}
-                <a class="item item-icon-right" href="{{pathFor 'map'}}" data-ion-menu-close>Map{{> ionIcon icon="ios-arrow-right"}}</a>
+                <a class="item item-icon-left item-icon-right" href="{{pathFor 'map'}}" data-ion-menu-close>{{> ionIcon icon="ios-location"}}Map{{> ionIcon icon="ios-arrow-right"}}</a>
               {{/if}}
-                <a class="item item-icon-right" href="{{pathFor 'historyinfo'}}" data-ion-menu-close>History{{> ionIcon icon="ios-arrow-right"}}</a>
-              <div class="item item-icon-right" data-ion-menu-close>
-                Close{{> ionIcon icon="ios-arrow-right"}}
+              <a class="item item-icon-left item-icon-right" href="{{pathFor 'settings'}}" data-ion-menu-close>{{> ionIcon icon="ios-gear"}}Settins{{> ionIcon icon="ios-arrow-right"}}</a>
+                <a class="item item-icon-left item-icon-right" href="{{pathFor 'historyinfo'}}" data-ion-menu-close>{{> ionIcon icon="ios-list"}}History{{> ionIcon icon="ios-arrow-right"}}</a>
+              <div class="item item-icon-left item-icon-right" data-ion-menu-close>
+                {{> ionIcon icon="ios-close"}}Close{{> ionIcon icon="ios-arrow-right"}}
               </div>
             </div>
           </div>
@@ -39,7 +41,7 @@
         {{> ionNavBar class="bar-positive"}}
 
         {{#ionNavView}}
-            
+
             {{> yield}}
 
         {{/ionNavView}}
