--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -21,12 +21,13 @@
                 </div>
               </div>
               <a class="item item-icon-left item-icon-right" href="{{pathFor 'welcome'}}" data-ion-menu-close>{{> ionIcon icon="ios-home"}}Home{{> ionIcon icon="ios-arrow-right"}}</a>
-              <a class="item item-icon-left item-icon-right" href="{{pathFor 'about'}}" data-ion-menu-close>{{> ionIcon icon="ios-information"}}About{{> ionIcon icon="ios-arrow-right"}}</a>
               {{#if shouldShowMapTab}}
                 <a class="item item-icon-left item-icon-right" href="{{pathFor 'map'}}" data-ion-menu-close>{{> ionIcon icon="ios-location"}}Map{{> ionIcon icon="ios-arrow-right"}}</a>
               {{/if}}
               <a class="item item-icon-left item-icon-right" href="{{pathFor 'settings'}}" data-ion-menu-close>{{> ionIcon icon="ios-gear"}}Settins{{> ionIcon icon="ios-arrow-right"}}</a>
                 <a class="item item-icon-left item-icon-right" href="{{pathFor 'historyinfo'}}" data-ion-menu-close>{{> ionIcon icon="ios-list"}}History{{> ionIcon icon="ios-arrow-right"}}</a>
+                <a class="item item-icon-left item-icon-right" href="{{pathFor 'help'}}" data-ion-menu-close>{{> ionIcon icon="ios-help"}}Help{{> ionIcon icon="ios-arrow-right"}}</a>
+                <a class="item item-icon-left item-icon-right" href="{{pathFor 'about'}}" data-ion-menu-close>{{> ionIcon icon="ios-information"}}About{{> ionIcon icon="ios-arrow-right"}}</a>
               <div class="item item-icon-left item-icon-right" data-ion-menu-close>
                 {{> ionIcon icon="ios-close"}}Close{{> ionIcon icon="ios-arrow-right"}}
               </div>
